--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "dayjs": "^1.11.3",
-    "mathjs": "^10.5.3"
+    "dayjs": "^1.11.3"
   }
 }
