--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "p5.dataframe",
+  "name": "p5.tidy",
   "version": "0.0.2",
-  "description": "A friendly and intuitive data analysis library for p5.js",
+  "description": "A data manipulation grammar for p5.js",
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
@@ -9,19 +9,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nickmcintyre/p5.dataframe.git"
+    "url": "git+https://github.com/nickmcintyre/p5.tidy.git"
   },
   "keywords": [
     "p5",
+    "tidyverse",
     "dataframe",
-    "pandas"
+    "pandas",
+    "dplyr"
   ],
   "author": "Nick McIntyre",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/nickmcintyre/p5.dataframe/issues"
+    "url": "https://github.com/nickmcintyre/p5.tidy/issues"
   },
-  "homepage": "https://github.com/nickmcintyre/p5.dataframe#readme",
+  "homepage": "https://github.com/nickmcintyre/p5.tidy#readme",
   "devDependencies": {
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
@@ -44,6 +46,9 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "dayjs": "^1.11.3"
+    "@tidyjs/tidy": "^2.4.6",
+    "d3-array": "^3.2.0",
+    "dayjs": "^1.11.4",
+    "ts-toolbelt": "^9.6.0"
   }
 }
