--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "p5.tidy",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A data manipulation grammar for p5.js",
   "main": "index.js",
   "scripts": {
@@ -38,17 +38,14 @@
     "karma-chrome-launcher": "^3.1.1",
     "karma-mocha": "^2.0.1",
     "mocha": "^10.0.0",
-    "p5": "^1.4.1",
+    "p5": "^1.4.2",
     "ts-loader": "^9.3.1",
-    "typedoc": "^0.23.2",
-    "typescript": "^4.7.4",
+    "typedoc": "^0.23.19",
+    "typescript": "^4.8.4",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "@tidyjs/tidy": "^2.5.1",
-    "d3-array": "^3.2.0",
-    "dayjs": "^1.11.5",
-    "ts-toolbelt": "^9.6.0"
+    "@tidyjs/tidy": "^2.5.1"
   }
 }
